--- a/css/style.css
+++ b/css/style.css
@@ -1742,13 +1742,13 @@ textarea.form-input {
 /* ------------------- */
 .visual-divider {
     padding: 0;
-    height: 300px;
+    height: 350px;
     overflow: hidden;
     position: relative;
     background-color: var(--primary-color);
 }
 
-.visual-divider img {
+.visual-divider video {
     width: 100%;
     height: 100%;
     object-fit: cover;
